--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body>
     <div id="buttons">
-        <button onclick="show(S4,S4_text)">L2-S4 Informatique</button>
-        <button onclick="show(S5,S5_text)">L3-S5 Systeme Informatique</button>
-        <button onclick="show(S6,S6_text)">L3-S6 Systeme Informatique</button>
+        <button onclick="show(S4,S4_text,'S4')">L2-S4 Informatique</button>
+        <button onclick="show(S5,S5_text,'S5')">L3-S5 Systeme Informatique</button>
+        <button onclick="show(S6,S6_text,'S6')">L3-S6 Systeme Informatique</button>
     </div>
-    <button id="back"onclick="del();saving()">back</button>
+    <button id="back"onclick="del()">back</button>
     <h1 id='welcome'>Bienvenue<p style="font-size:medium;">( PS : les notes ne sont pas sauvegardé sur le site )</p></h1>
     
     <h1 id="Titre">
@@ -37,6 +37,7 @@
     <p id='download'><a href="./app/Moyenne-win32-x64.zip">Télécharger l'application .</a></p>
 
     <script src="./js/modules.js"></script>
+    <script src="js/coockies.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
